@@ -56,7 +56,7 @@ Fe(Ac)2,Fe(CH3COO)2(0),Fe(CH3COO)2,aq,SSWS97,DEW17.6,26.Sep.17,cal,-201800,-2591
 Fe(HCOO)+,Fe(HCOO)+,Fe(HCOO)+,aq,HS19,DEW19.1,30.Jun.20,cal,-111800,-112263,59,30,27,6.6001,2.0008,3.1604,-2.8617,20.5995,3.0764,-0.3418,1
 Fe(HSiO3)+,Fe(HSiO3)+,Fe(HSiO3)+,aq,HS19,DEW19.1,30.Jun.20,cal,-277500,-298539,14,77,38.2,9.1022,4.383,1.163,-2.9602,54.4228,12.6503,0.3397,1
 FeOH+,FeOH(+),FeOH+,aq,SSWS97,DEW17.13,26.Sep.17,cal,-65850,NA,-10,15,2,2.2461,-2.1446,6.6364,-2.6903,21.4354,0.0209,0.7031,1
-Fe+2,Fe(+2),Fe+2,aq,SSWS97,DEW17.2,26.Sep.17,cal,-21870,NA,-25.3,-7.9,-22.2,-0.9153,-9.3356,9.6131,-2.3931,14.9634,-4.6439,1.4574,2
+Fe+2,Fe(+2),Fe+2,aq,SSWS97,DEW19.6,11.Jul.20,cal,-21870,NA,-25.3,-7.9,-22.2,-1.0416,-9.0072,9.6653,-2.4066,14.9634,-4.6439,1.4574,2
 Fe+3,Fe(+3),Fe+3,aq,SSWS97,DEW17.2,26.Sep.17,cal,-4120,-11850,-66.3,-18.6,-37,-6.3271,-3.5568,12.7493,-2.632,19.0461,-6.8234,2.5812,3
 FeCl+,FeCl(+),FeCl+,aq,SSWS97,DEW17.6,26.Sep.17,cal,-53030,-61260,-10.06,20.57,5.8,2.9827,-1.4433,6.0483,-2.7193,24.6737,1.1555,0.7003,1
 FeCl+2,FeCl(++),FeCl+2,aq,TDDZ00,DEW17.14,26.Sep.17,cal,-37573,-50875,-28.7,3.3,-19,-1.4537,-5.6672,9.59,-2.5447,21.8511,-2.3624,1.4925,2
@@ -128,7 +128,7 @@ MgCl+,MgCl(+),MgCl+,aq,SSWS97,DEW17.6,26.Sep.17,cal,-139700,-150933,-19,25,1.25,
 MgCO3,MgCO3(0),MgCO3,aq,SSWS97,DEW17.27,26.Sep.17,cal,-238760,-270570,-24,-24.8,17.9,5.1407,0.6113,4.3256,-2.8043,-5.6039,-8.0864,0.3,0
 MgO,MgO,MgO,aq,HS19,DEW19.1,30.Jun.20,cal,-137500,-139804,24.6,-24.5,6.2,2.8684,-1.5521,6.1396,-2.7148,-5.4281,-8.0252,0.3,0
 MgOH+,MgOH(+),MgOH+,aq,SSWS97,DEW19.2,30.Jun.20,cal,-149225,-152955,-18,40,2,2.3141,-2.0799,6.5821,-2.693,37.393,5.1134,0.8449,1
-Mg(SiO2)(HCO3)+,Mg(SiO2)(HCO3)+,MgSiC+,aq,HS19,DEW19.1,30.Jun.20,cal,-454300,-479123,48,78.5,53.5,11.8266,6.977,-1.012,-3.0674,50.5582,12.9558,-0.1752,1
+Mg(SiO2)(HCO3)+,Mg(SiO2)(HCO3)+,Mg(SiO2)(HCO3)+,aq,HS19,DEW19.1,30.Jun.20,cal,-454300,-479123,48,78.5,53.5,11.8266,6.977,-1.012,-3.0674,50.5582,12.9558,-0.1752,1
 MgSO4,MgSO4,MgSO4,aq,ARHB06,DEW17.29,26.Sep.17,cal,-289449,-327449,-1,20,35,8.3417,3.659,1.77,-2.9303,18.3485,1.0394,0.05,0
 Mn+2,Mn(+2),Mn+2,aq,SSWS97,DEW17.2,26.Sep.17,cal,-54500,-52724,-17.6,-4.1,-17.1,-1.1288,-5.3578,9.3306,-2.5575,16.6673,-3.8698,1.4006,2
 MnCl+,MnCl(+),MnCl+,aq,SSWS97,DEW17.4,26.Sep.17,cal,-86290,-88280,12,24.63,6.3,2.9207,-1.5023,6.0978,-2.7169,23.9969,1.9824,0.3686,1
