@@ -245,11 +245,11 @@ DEW17.17,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","Re
 DEW17.18,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","Revised 1/22/15 based on fitting Cp and V vs T data from @HDM+94 + revised correlation for a<sub>1</sub> from @SHA14; omega from delCPr above 100 &deg;C [@ZW07]; G, H, and S from @AH97b",http://www.dewcommunity.org
 DEW17.19,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","Regression of @RS87 & @TZA97 with new full correlations",http://www.dewcommunity.org
 DEW17.21,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","HSO<sub>3</sub><sup>-</sup>: revised using published estimated V and pred. a<sub>1</sub> from new correlation",http://www.dewcommunity.org
-DEW17.22,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","isobutane: G, H, S, Cp, V from @SH90; a<sub>1</sub> estimated with @SHA14; c2 estimated with a new hydrocarbon correlation.",http://www.dewcommunity.org
+DEW17.22,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","isobutane: G, H, S, Cp, V from @SH90; a<sub>1</sub> estimated with @SHA14; c<sub>2</sub> estimated with a new hydrocarbon correlation.",http://www.dewcommunity.org
 DEW17.23,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","May, 2017 Fitted to logKs from @OH88 + retrieved logKs from Hemley experiments at 1.0 kb using the HCl referred to above",http://www.dewcommunity.org
 DEW17.25,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","Revised G, S and Cp to fit @Noy07 & @SGX+06 with a<sub>1</sub> of the complex equal to the sum of the a<sub>1</sub> values of the ions",http://www.dewcommunity.org
 DEW17.26,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","Fit to @SBS14 & @SH77; plus revised V increased so that a<sub>1</sub> of the complex is the sum of the a<sub>1</sub> values of the ions",http://www.dewcommunity.org
-DEW17.27,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","MgCO<sub>3</sub>: @SSH97 revised volume increased in order that a<sub>1</sub> of the complex is the sum of the a<sub>1</sub> values of the ions; and Cp revised using isocoulombic reln with CaCO3,aq; also omega is set to +0.3 as for all neutral metal complexes.",http://www.dewcommunity.org
+DEW17.27,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","MgCO<sub>3</sub>: @SSH97 revised volume increased in order that a<sub>1</sub> of the complex is the sum of the a<sub>1</sub> values of the ions; and Cp revised using isocoulombic reln with CaCO<sub>3</sub>,aq; also omega is set to +0.3 as for all neutral metal complexes.",http://www.dewcommunity.org
 DEW17.29,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","S, Cp, V, omega from fit to @ARHB06 and @FDM94",http://www.dewcommunity.org
 DEW17.30,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","NaCO<sub>3</sub><sup>-</sup>: Fit to @SBS13 (80 to 200 C) & @GTS61 (at 25 C) to get G, S and Cp;  with a<sub>1</sub> pred. from the sum of the ions and used to predict the volume",http://www.dewcommunity.org
 DEW17.32,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","NaOH: Fitted to @HP97 data with a<sub>1</sub> pred. from the sum of the ions and used to predict the volume",http://www.dewcommunity.org
@@ -260,15 +260,16 @@ DEW17.36,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","S<
 DEW17.37,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","fit to Raman speciation and quartz solubility data",http://www.dewcommunity.org
 DEW17.38,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","SO<sub>2</sub>: @SHS89 with revised a<sub>1</sub> predicted as a complex from delVn",http://www.dewcommunity.org
 DEW17.39,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","toluene: @PS01 with new a<sub>1</sub> to a<sub>4</sub> predicted with revised a<sub>1</sub> consistent with @SHA14",http://www.dewcommunity.org
-DEW17.40,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","urea: Revised Feb. 2015 by Dimitri: c1, c2, and omega from PS01 based on Stokes (1967) data; V from Cabani et al. (1981) with a<sub>1</sub>-a<sub>4</sub> predicted.",http://www.dewcommunity.org
+DEW17.40,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","urea: Revised Feb. 2015 by Dimitri: c<sub>1</sub>, c<sub>2</sub>, and omega from PS01 based on Stokes (1967) data; V from Cabani et al. (1981) with a<sub>1</sub>-a<sub>4</sub> predicted.",http://www.dewcommunity.org
 DEW17.101,"D. A. Sverjensky et al.",2017,"Deep Earth Water (DEW) spreadsheet","formate and lactate: revised with new predicted a<sub>1</sub> for ions",https://doi.org/10.1016/0016-7037(90)90429-O
 BDat17.1,"D. A. Sverjensky et al.",2017,"berman.dat file in SUPCRT92b.zip on the DEW website","antigorite: &quot;Oct. 21, 2016: Revised volume coefficients consistent with @HDR06 and @YIY+14 &quot;",http://www.dewcommunity.org/resources.html
 AKAE19,"M. R. Azadi et al.",2019,"Fluid Phase Equilib. 480, 25-40","metal-glycinate complexes",https://doi.org/10.1016/j.fluid.2018.10.002
 DEW19,"D. A. Sverjensky et al.",2019,"Deep Earth Water (DEW) spreadsheet","(values listed in DEW spreadsheet)",http://www.dewcommunity.org
 DEW19.1,"D. A. Sverjensky et al.",2019,"Deep Earth Water (DEW) spreadsheet","(values from @HS19 listed in DEW spreadsheet)",http://www.dewcommunity.org
 DEW19.2,"D. A. Sverjensky et al.",2019,"Deep Earth Water (DEW) spreadsheet","MgOH<sup>+</sup>: Revised by Dimitri, January, 2019; with minimum volume needed",http://www.dewcommunity.org
-DEW19.3,"D. A. Sverjensky et al.",2019,"Deep Earth Water (DEW) spreadsheet","CaO: Fitted by Dimitri to high PT retrieval's from Fang",http://www.dewcommunity.org
+DEW19.3,"D. A. Sverjensky et al.",2019,"Deep Earth Water (DEW) spreadsheet","CaO: Fitted by Dimitri to high PT retrievals from Fang",http://www.dewcommunity.org
 DEW19.4,"D. A. Sverjensky et al.",2019,"Deep Earth Water (DEW) spreadsheet","glycinate: @AH97b for the G, H, S, Cp, V",http://www.dewcommunity.org
 DEW19.5,"D. A. Sverjensky et al.",2019,"Deep Earth Water (DEW) spreadsheet","(Ca<sup>+2</sup>: values listed in DEW spreadsheet)",http://www.dewcommunity.org
+DEW19.6,"D. A. Sverjensky et al.",2019,"Deep Earth Water (DEW) spreadsheet","(Fe<sup>+2</sup>: take HKF a<sub>1</sub>-a<sub>4</sub> parameters from @HS19, which are different from 2019 DEW spreadsheet)",http://www.dewcommunity.org
 HS19,"F. Huang and D. A. Sverjensky",2019,"Geochim. Cosmochim. Acta 254, 192-230","ions and metal complexes",https://doi.org/10.1016/j.gca.2019.03.027
 LA19,"D. E. LaRowe and J. P. Amend",2019,"Geomicrobiol. J. 36, 492-505","dimethylamine, trimethylamine, resorcinol, phloroglucinol, cyclohexane carboxylate, and cyclohexane carboxylic acid",https://doi.org/10.1080/01490451.2019.1573278
